<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="#979696">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/news_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/film"
                android:textColor="#345361"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/news_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/news_title"
                android:textColor="#513636"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/news_section"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/news_section"
                app:layout_constraintTop_toBottomOf="@+id/news_section" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:text="@string/type"
                android:textColor="#233945"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/news_type"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/news_title"
                app:layout_constraintTop_toBottomOf="@+id/news_title" />

            <TextView
                android:id="@+id/news_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article"
                android:textColor="#233945"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/type"
                app:layout_constraintTop_toTopOf="@+id/type" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:text="@string/date"
                android:textColor="#24453e"
                android:textStyle="bold"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/news_date"
                app:layout_constraintStart_toStartOf="@+id/type"
                app:layout_constraintTop_toBottomOf="@+id/type" />

            <TextView
                android:id="@+id/news_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_date"
                android:textColor="#24453e"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/date"
                app:layout_constraintTop_toTopOf="@+id/date" />

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>